--- a/Assignment-1/assignment_1.ipynb
+++ b/Assignment-1/assignment_1.ipynb
@@ -129,10 +129,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of rectangle:  100.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# area of rectangle\n",
+    "length=float(input(\"Enter the length of rectangle\"))\n",
+    "width=float(input(\"Enter the width of rectangle\"))\n",
+    "area=length*width\n",
+    "print(\"Area of rectangle: \",area)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{:.2f}\".format(area))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average of three number is  20.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# avg of three num\n",
+    "num1=float(input(\"Enter the number 1: \"))\n",
+    "num2=float(input(\"Enter the number 2: \"))\n",
+    "num3=float(input(\"Enter the number 3: \"))\n",
+    "avg=(num1+num2+num3)/3\n",
+    "print(\"The average of three number is \",\"%.2f\" % avg) # .2f used to give floating point upto 2 decimal places"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2> Control Flow</h2>\n",
+    "<li>WAP to ask user a number and determine wheter it is postive, negative or zero</li>\n",
+    "<li>WAP to implement a loop that continue to ask user to input number until they enter 'exit'</li>\n",
+    "<li>WAP to use break to exit loop and continue to prompt for the new number if the input is not exit</li>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postive\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"Enter the number: \"))\n",
+    "if (num>0):print(\"Postive\")\n",
+    "elif (num==0):print(\"Zero\")\n",
+    "else: print(\"Negative\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Press 0 to exit:\n",
+      "Press 0 to exit:\n",
+      "Press 0 to exit:\n",
+      "Press 0 to exit:\n",
+      "[12, 312, 330]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[]\n",
+    "while(True):\n",
+    "    print(\"Press 0 to exit:\")\n",
+    "    x=int(input(\"Enter the number\"))\n",
+    "    if(x==0):break\n",
+    "    else:a.append(x)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def toBinary(num): \n",
+    "    if num==0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
