update 30 aug file

--- a/30_aug.ipynb
+++ b/30_aug.ipynb
@@ -126,6 +126,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello I'm Ayush from MCA\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test(name,course=\"MCA\"):\n",
+    "    print(\"Hello I'm\",name,\"from\",course)\n",
+    "test(\"Ayush\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using args when we dont know how much parameter is required"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printNum(*args):\n",
+    "    print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 34, 55, 77, 32)\n",
+      "(-1, 44, 66, -3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "printNum(1,2,34,55,77,32)\n",
+    "printNum(-1,44,66,-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Scopes</h1>\n",
+    "<li>Local Scope: Variables declared inside a function are local to that function.</li>\n",
+    "<li>\n",
+    "Enclosing Scope: Refers to variables in the scope of the outer function when using nested functions.\n",
+    "</li><li>\n",
+    "Global Scope: Variables declared at the top level of a script or module are global and can be accessed anywhere in the code.\n",
+    "</li><li>\n",
+    "Built-in Scope: Refers to the names of built-in functions and exceptions</li>"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
