--- a/30_aug.ipynb
+++ b/30_aug.ipynb
@@ -195,6 +195,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local:  30\n",
+      "enclosing  20\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=10 #global\n",
+    "def scopes_check():\n",
+    "    x=20 #enclosing scope\n",
+    "    def inner_func():\n",
+    "        x=30 #local\n",
+    "        print(\"local: \",x)\n",
+    "    inner_func()\n",
+    "    print(\"enclosing \",x)\n",
+    "scopes_check()\n",
+    "print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
