--- a/30_aug.ipynb
+++ b/30_aug.ipynb
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Passing function to a function"
+    "# Passing function to a function"
    ]
   },
   {
@@ -279,19 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmerganame\u001b[39m(name1,name2):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m a\u001b[38;5;241m+\u001b[39mb\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmerganame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mayush\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43mname\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m singh\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "Cell \u001b[0;32mIn[7], line 4\u001b[0m, in \u001b[0;36mmerganame\u001b[0;34m(name1, name2)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmerganame\u001b[39m(name1,name2):\n\u001b[0;32m----> 4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43ma\u001b[49m\u001b[38;5;241m+\u001b[39mb\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AYUSH SINGH\n"
      ]
     }
    ],
@@ -299,7 +294,7 @@
     "def name(name):\n",
     "    return name.upper()\n",
     "def merganame(name1,name2):\n",
-    "    return a+b\n",
+    "    return name1+name2\n",
     "print(merganame(name(\"ayush\"),name(\" singh\")))"
    ]
   },
