--- a/Assignment-1/assignment_1.ipynb
+++ b/Assignment-1/assignment_1.ipynb
@@ -3,6 +3,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![label](ss.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  Ayush Singh\n",
+      "Course:  MCA\n",
+      "3.12.3 (main, Jul 31 2024, 17:43:48) [GCC 13.2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(\"Name: \",\"Ayush Singh\")\n",
+    "print(\"Course: \",\"MCA\")\n",
+    "print(sys.version)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Wap to print hello world"
    ]
@@ -198,6 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Control flow is used to control the flow of code using conditions<br>In python we have <li>if</li><li>elif</li> <li>else. </li>Using this we can provide various condition that should be checked to continue the flow of code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -246,16 +287,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Binary: 10101\n",
+      "Octal: 12\n",
+      "Hexadecimal: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_number(num):\n",
+    "    # Binary conversion\n",
+    "    binary = ''\n",
+    "    for i in range(num.bit_length(), -1, -1):\n",
+    "        binary += '1' if (num >> i) & 1 else '0'\n",
+    "    binary = binary.lstrip('0') or '0'  \n",
+    "\n",
+    "    # Octal conversion\n",
+    "    octal = ''\n",
+    "    for i in range(num.bit_length() - 1, -1, -3):  \n",
+    "        octal_digit = (num >> i) & 7  \n",
+    "        octal += str(octal_digit)\n",
+    "    octal = octal.lstrip('0') or '0'  \n",
+    "\n",
+    "    # Hexadecimal conversion\n",
+    "    hex_digits = \"0123456789ABCDEF\"\n",
+    "    hexadecimal = ''\n",
+    "    for i in range(num.bit_length() - 1, -1, -4):  \n",
+    "        hex_digit = (num >> i) & 15  \n",
+    "        hexadecimal += hex_digits[hex_digit]\n",
+    "    hexadecimal = hexadecimal.lstrip('0') or '0'  \n",
+    "\n",
+    "    print(f\"Binary: {binary}\")\n",
+    "    print(f\"Octal: {octal}\")\n",
+    "    print(f\"Hexadecimal: {hexadecimal}\")\n",
+    "\n",
+    "number = int(input(\"Enter an integer: \"))\n",
+    "convert_number(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def toBinary(num): \n",
-    "    if num==0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        "
-   ]
+   "source": []
   }
  ],
  "metadata": {
