--- a/4_sept_assignment.ipynb
+++ b/4_sept_assignment.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add(*args):\n",
+    "def add(args):\n",
     "    max=sum=0\n",
     "    min=args[0]\n",
     "    a=[]\n",
@@ -36,27 +36,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def take_list(i):\n",
+    "    for x in range(0,i):\n",
+    "        z=int(input(\"Enter list element\"))\n",
+    "        a.append(z)\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, 3]\n",
       "1\n",
       "2\n",
       "3\n",
-      "4\n",
-      "sum:  10\n",
-      "avg:  2.5\n",
-      "max 4\n",
+      "sum:  6\n",
+      "avg:  2.0\n",
+      "max 3\n",
       "min 1\n",
-      "[1, 3, 6, 10]\n"
+      "[1, 3, 6]\n"
      ]
     }
    ],
    "source": [
-    "a=\n"
+    "i=int(input(\"Enter length\"))\n",
+    "a=take_list(i)\n",
+    "print(a)\n",
+    "add(a)\n"
    ]
   },
   {
