--- a/4_sept_assignment.ipynb
+++ b/4_sept_assignment.ipynb
@@ -4,17 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "wap  that takes a list as input and return \n",
+    "wap  that takes a list as input and return <br>\n",
     "one input arg and return its sum cummulative sum average min and max value using for loop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add(args):\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    '''\n",
     "    max=sum=0\n",
     "    min=args[0]\n",
     "    a=[]\n",
@@ -36,11 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def take_list(i):\n",
+    "    a=[]\n",
     "    for x in range(0,i):\n",
     "        z=int(input(\"Enter list element\"))\n",
     "        a.append(z)\n",
@@ -49,30 +54,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3]\n",
       "1\n",
       "2\n",
       "3\n",
-      "sum:  6\n",
-      "avg:  2.0\n",
-      "max 3\n",
+      "4\n",
+      "sum:  10\n",
+      "avg:  2.5\n",
+      "max 4\n",
       "min 1\n",
-      "[1, 3, 6]\n"
+      "[1, 3, 6, 10]\n"
      ]
     }
    ],
    "source": [
     "i=int(input(\"Enter length\"))\n",
     "a=take_list(i)\n",
-    "print(a)\n",
     "add(a)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=int(input(\"enter number\"))\n",
+    "se=0\n",
+    "for i in range(num,0,-1):\n",
+    "    se+=i\n",
+    "print(se)\n",
+    "    "
    ]
   },
   {
