added documentation to function

--- a/4_sept_assignment.ipynb
+++ b/4_sept_assignment.ipynb
@@ -10,14 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add(args):\n",
     "    \n",
     "    '''\n",
-    "    \n",
+    "    This function provides min,max,sum,cummulative sum,avg\n",
+    "    takes input as list \n",
     "    '''\n",
     "    max=sum=0\n",
     "    min=args[0]\n",
@@ -104,6 +105,51 @@
     "    se+=i\n",
     "print(se)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function add in module __main__:\n",
+      "\n",
+      "add(args)\n",
+      "    This function provides min,max,sum,cummulative sum,avg\n",
+      "    takes input as list\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(add)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function add in module __main__:\n",
+      "\n",
+      "add(args)\n",
+      "    This function provides min,max,sum,cummulative sum,avg\n",
+      "    takes input as list\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(help(add))"
    ]
   },
   {
