--- a/Assignment-2/Assignment-2.ipynb
+++ b/Assignment-2/Assignment-2.ipynb
@@ -52,14 +52,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_profile(name,city,age=18):\n",
-    "    print(\"Name\",name)\n",
-    "    print(\"age\",age)\n",
-    "    print(\"city\",city)"
+    "    print(\"Name: \",name,\"Age:\",age,\"City:\",city)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name:  Ayush Age: 18 City: Satna\n",
+      "Name:  Aman Age: 16 City: Jaipur\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_profile(name=\"Ayush\",city=\"Satna\")\n",
+    "create_profile(name=\"Aman\",city=\"Jaipur\",age=16)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><font color=purple face=\"comic san ms\">Write a function sum_numbers that takes any number of positional arguments (args) and keyword arguments (*kwargs). It should:\n",
+    "<br>\n",
+    "Return the sum of all *args if they are numbers.\n",
+    "<br>\n",
+    "Return a dictionary of all keyword arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_number(*args,**kwargs):\n",
+    "    sum=0\n",
+    "    for i in args: #just simple iteration for getting sum of elements\n",
+    "        sum+=i\n",
+    "    if(len(kwargs)):\n",
+    "        return sum,kwargs # return dict only when it have elements \n",
+    "    else:\n",
+    "        return sum\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "(9, {'a': 12, 'b': 32})\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_number(2,3,4))\n",
+    "print(sum_number(2,3,4,a=12,b=32))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><font color=purple face=\"comic san ms\">Write a function that uses map and a lambda to return a list where each element is squared."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def square_elements(lst):\n",
+    "    return list(map(lambda x: x ** 2, lst))# each element of list is squared\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "squared = square_elements(numbers)\n",
+    "print(squared)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p><font color=purple face=\"comic san ms\">Write a function that filters out all odd numbers from a list using filter and a lambda function."
    ]
   },
   {
