--- a/Assignment-2/Assignment-2.ipynb
+++ b/Assignment-2/Assignment-2.ipynb
@@ -165,6 +165,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def filter_odd(lst):\n",
+    "    return list(filter(lambda x: x % 2 == 0, lst)) \n",
+    "#filter function take lambda as condition and lst as iterable list\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "odd = filter_odd(numbers)\n",
+    "print(odd)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
