--- a/Assignment-2/Assignment-2.ipynb
+++ b/Assignment-2/Assignment-2.ipynb
@@ -187,11 +187,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h1>List comprehension </h1>\n",
+    "<p>Allows to generate a new list by applying an expression to each element of an existing iterable (like a list or a range), optionally filtering elements based on a condition.</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[x**2 for x in range(5)]\n",
+    "# first part is expression next part is iterative part \n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2=[x**2 for x in range(1,6)if x %2==0]\n",
+    "# first part is expression second part is iterative part and last is condtion part\n",
+    "print(list2)"
+   ]
   },
   {
    "cell_type": "code",
