just last question left

--- a/Assignment-2/Assignment-2.ipynb
+++ b/Assignment-2/Assignment-2.ipynb
@@ -195,6 +195,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red>Create a list comprehension that takes a list of numbers and returns a list of their squares."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -230,6 +237,98 @@
     "list2=[x**2 for x in range(1,6)if x %2==0]\n",
     "# first part is expression second part is iterative part and last is condtion part\n",
     "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color= red>Use a list comprehension to create a list of even numbers from 1 to 20."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list3=[x for x in range(1,21) if x%2==0]\n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color= red>Write a function file_operations that creates a directory named \"test_folder\" using os.makedirs(). Then, pause the execution for 3 seconds using time.sleep(), and finally, delete the directory using os.rmdir()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory  Created\n",
+      "Directory  removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "def file_operation(path):\n",
+    "    # check wether the path is correct or not\n",
+    "    try:\n",
+    "        os.makedirs(path,exist_ok=True)\n",
+    "        print(\"Directory  Created\")\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "    time.sleep(3)\n",
+    "    os.rmdir(path)\n",
+    "    print(\"Directory  removed\")\n",
+    "    \n",
+    "path=r\"H:\\Python-Mca\\new_folder\"# new directory created with name new_folder \n",
+    "file_operation(path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=red>Write a Python script that imports only sleep from the time module and renames it to pause. Use it to pause execution for 2 seconds and print \"Paused execution...\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pause\n",
+      "After 2 sec\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import sleep as pause\n",
+    "print(\"Pause\")\n",
+    "pause(2)\n",
+    "print(\"After 2 sec\")"
    ]
   },
   {
