--- a/Assignment-2/Assignment-2.ipynb
+++ b/Assignment-2/Assignment-2.ipynb
@@ -332,6 +332,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Recursive Function with *args and kwargs (Flattening a List):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a recursive function flatten_list that can flatten a nested list of any depth using *args and **kwargs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def flatten_list(nested_list):\n",
+    "    flat_list = []\n",
+    "    for item in nested_list:\n",
+    "        if isinstance(item, list):\n",
+    "            flat_list.extend(flatten_list(item))  \n",
+    "        else:\n",
+    "            flat_list.append(item)  \n",
+    "    return flat_list\n",
+    "\n",
+    "\n",
+    "nested_list = [1, [2, [3, [4, [5]]]], 6]\n",
+    "result = flatten_list(nested_list)\n",
+    "print(result)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
